--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -14,23 +14,31 @@
 
 .title-section {
     display: flex;
-    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
     align-items: flex-start;
-    margin: 40px;
+    margin: 8% 0px;
 }
 
 .title {
     font-size: 2rem;
     font-weight: 900;
     margin: 0;
+    text-align: center;
+    width: 50%;
 }
 
 .description {
-    max-width: 300px;
+    width: 50%;
+    display: flex;
+    
     font-size: 1rem;
     color: #666666;
     line-height: 1.5;
     margin: 0;
+}
+.description p{
+    max-width: 350px;
 }
 
 .media-section {
@@ -120,4 +128,13 @@
     font-size: 1.5rem;
     font-weight: 700;
     text-transform: uppercase;
+}
+@media screen and (max-width:600px) {
+    .title-section .title,
+    .title-section .description{
+       width: 100% !important;
+       text-align: center;
+       justify-content: center;
+       text-align: center;
+    }
 }
