--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,7 +31,7 @@ footer {
   background: #3498db;
 }
 .section2 {
-  background: #1a1a1a;
+  background: #000000;
   height: 7000px;
 }
 .section3 {
@@ -43,11 +43,11 @@ footer {
   height: 3000px !important;
 }
 .section5 {
-  background: rgb(34, 34, 34);
+  background: #000000;
   height: 1200px;
 }
 .section6 {
-  background: #1a1a1a;
+  background: #000000;
   height: 1500px;
 }
 
@@ -58,11 +58,11 @@ footer {
   background: linear-gradient(to right, #303f9f, #9c27b0);
 }
 .grad-bg:hover {
-  background: linear-gradient(to right, #9c27b0, #303f9f) !important;
+  background: #ff4438 !important;
 }
 
 .corner-btn:hover {
-  background: linear-gradient(to right, #9c27b0, #303f9f) !important;
+  background: #ff4438 !important;
 }
 
 /* .sec3{
@@ -122,6 +122,7 @@ footer {
 /* Base Navbar Styles */
 .navbar {
   position: fixed;
+  z-index: 99999999 !important;
   top: 0;
   left: 0;
   width: 100%;
@@ -449,4 +450,8 @@ footer {
 }
 .red-hover:hover{
  color: #FF4438;
+}
+.home-page-testomonial{
+  background-color: #ffffff;
+  padding: 100px 15px;
 }
