--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,7 +32,7 @@ footer {
 }
 .section2 {
   background: #000000;
-  height: 5500px;
+  height: 2000px;
 }
 .section3 {
   background: #2ecc71;
@@ -467,4 +467,11 @@ footer {
 .no-scroll {
   overflow: hidden;
   height: 100vh;
+}
+.sectionmainbox{
+  background-color: #000000 !important;
+}
+.SeeingisExp{
+  margin-right:10px ;
+  font-size: 70px;
 }
